# piradiod

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  console.py  deploy.sh  grammar.py  install-udev.sh  main.py  parser.py  piradionrt.py  prereqs.sh  prog-lmx.py  pyproject.toml  remove-all.sh  setup.cfg  startup.py  zcu111.py
LMK04208/: lmk04208.py
LMX2595/: __init__.py  config.py  device.py  lmx2595.py
LMX2595/data/: LMX2595_PLL.ini  defaults.py
LTC5584/: __init__.py  ltc5584.py
MAX11300/: __init__.py  device.py  max11300.py
Si5382/: si5382.py
base/: CHANGELOG  CMakeLists.txt  copyright
base/conf/: 40-piradio.rules
base/deb/: conffiles
base/src/: piradio-admin
board_140GHz/: __init__.py  board.py  hcport.py  rx.py  tx.py
cmake/: changelog.cmake  click-man-pages.cmake  common.cmake  copyright.cmake  grpc.cmake  piradio.cmake  protobuf-config-version.cmake  protobuf-module.cmake
ederd/: ederd  edertool
ederd/eder/: __init__.py  adc.py  beamforming.py  child.py  config.py  eder.py  pll.py  rx.py  selftest.py  state_machine.py  temperature.py  test.py  tx.py
firmware/SDRv2/: SDRv2NRT.dtbo
fpgad/: CHANGELOG  CMakeLists.txt  copyright
fpgad/conf/: io.piradio.fpgad.service
fpgad/deb/: conffiles  postinst
fpgad/include/piradio/: clocks.hpp  fpga.hpp  rfdc_manager.hpp  rfdc_tile.hpp  zcu111.hpp  zcu111_manager.hpp
fpgad/src/: LMX_regs.cxx  fpga.cxx  fpgad.cxx  rfdc.cxx  rfdc_manager.cxx  rfdcd.cxx  zcu111.cxx  zcu111_manager.cxx  zcu111d.cxx
libpidaemon/: CMakeLists.txt
libpidaemon/include/piradio/: pidaemon.hpp  sdsig.hpp
libpidaemon/src/: daemon.cxx  grpc.cxx
libpiradio/: CMakeLists.txt
libpiradio/include/piradio/: cmdline.hpp  daemon.hpp  dbus.hpp  fpga.hpp  freq_module.hpp  frequency.hpp  nrange.hpp  pidaemon.hpp  sdjournal.hpp  services.hpp
libpiradio/src/: cmdline.cxx  daemon.cxx  fpga.cxx  freq_module.cxx  frequency.cxx  grpc.cxx
librfdc/: CMakeLists.txt
librfdc/include/piradio/: csr.hpp  rfdc.hpp  rfdc_dc.hpp  rfdc_tile.hpp
librfdc/src/: mts.cxx  rfdc.cxx  rfdc_adc.cxx  rfdc_dc.cxx  rfdc_dc_mix.cxx  rfdc_disable_nco.cxx  rfdc_str.cxx  rfdc_tile.cxx  rfdcmix.cxx  rfdcnco.cxx  rfdcstatus.cxx  rfdcutil.cxx
libsamplebuf/: CMakeLists.txt
libsamplebuf/include/piradio/: samplebuf.hpp  trigger.hpp  uio.hpp
libsamplebuf/src/: dumpbuf.cpp  fillbuf.cpp  samplebuf.cpp  trigger.cpp  uio.cpp
libtilmx/: CMakeLists.txt  parse_lmx_regs.py
libtilmx/include/piradio/: lmx2594.hpp  lmx2594_config.hpp  lmx2595_config.hpp  lmx2820_config.hpp
libtilmx/src/: lmx2594.cxx  lmx2594_config.cxx  lmx2595_config.cxx  lmx2820_config.cxx  test-tilmx.cxx
libzcu111/: CMakeLists.txt
libzcu111/include/piradio/: clocks.hpp  i2c.hpp  zcu111.hpp
libzcu111/src/: clocks.cxx  i2c.cxx  lmk04208.cxx  zcu111.cxx  zcu111_predef_lmx.cxx  zcu111_util.cxx
picommand/: __init__.py  command.py
pioutput/: __init__.py  output.py
piradio/: __init__.py  console.py  daemon.py  nrt.py  zcu111.py
piradio-base/: CMakeLists.txt
piradio-base/deb/: postinst
piradio-fpgad/: CMakeLists.txt
piradio-fpgad/conf/: io.pi-rad.fpgad.conf  io.piradio.fpgad.conf  io.piradio.fpgad.service  piradio-fpgad.service
piradio-fpgad/deb/: postinst
piradio-fpgad/include/piradio/: fpga.hpp
piradio-fpgad/src/: fpga.cxx  fpgad.cxx
piradio-rfdcd/: CMakeLists.txt
piradio-rfdcd/src/: rfdc_tile.cxx
piradio-sampled/: CMakeLists.txt  piradio-sampled.cxx  sampled.proto
piradio-sampled/conf/: io.pi-rad.sampled.conf  io.piradio.sampled.conf  io.piradio.sampled.service  piradio-sampled.service
piradio-sampled/src/: piradio-sampled.cxx
piradio/boards/: __init__.py
piradio/command/: __init__.py  command.py  parser.py  shutdown.py  state_machine.py  tasks.py
piradio/devices/: __init__.py  sysfs.py
piradio/jupyter/: __init__.py  erasynth.py  fieldfox.py  nrt.py  nrt_common.py  nrtiq.py  nrtreal.py  sdrv2.py  signals.py
piradio/monitor/: __init__.py  monitor.py
piradio/newstruct/: __init__.py  newstruct.py
piradio/ofdm/: __init__.py  equalizer.py  impairments.py  modulator.py  parameters.py  symbol.py  sync_word.py  synchronizer.py
piradio/output/: output.py
piradio/util/: __init__.py  filters.py  freq.py  iq_spectrum.py  power.py  real_spectrum.py  samples.py  spectrum.py  spectrum_base.py  time.py
piradio/zcu111/: __init__.py  zcu111.py
piradiosampled/: CMakeLists.txt  piradio-sampled.cxx  sampled.proto
pirsamp/: CMakeLists.txt
pirsamp/include/pirsamp/: pirsamp.hpp
pirsamp/src/: gensine.cpp  pirsamp.cpp  readbuf.cpp
rfdcd/: CHANGELOG  CMakeLists.txt  copyright
rfdcd/conf/: io.piradio.rfdcd.conf  io.piradio.rfdcd.service
rfdcd/deb/: conffiles
rfdcd/include/piradio/: rfdc.hpp
rfdcd/src/: rfdc_adc.cxx  rfdcd.cxx
rfdcpp/: CMakeLists.txt
rfdcpp/include/xrfdcpp/: adc.hpp  bitfield.hpp  config.hpp  dac.hpp  frequency.hpp  mixer.hpp  regs.hpp  rfdc.hpp  slice.hpp  slice_base.hpp  tile.hpp  types.hpp  xrfdcpp.hpp
rfdcpp/src/: adc.cpp  config.cpp  dac.cpp  mixer.cpp  pymod.cpp  rfdcstatus.cpp  slice_base.cpp  tile.cpp  xrfdcpp.cpp
sampled/: CHANGELOG  CMakeLists.txt  copyright
sampled/conf/: io.piradio.sampled.conf  io.piradio.sampled.service
sampled/deb/: conffiles  postinst
sampled/src/: piradio-sampled.cxx  sampled.cxx
scripts/: add-news  get-click-man-pages  write-click-man-pages
siversd/: CHANGELOG  CMakeLists.txt  siversd  siversd_pb2.py  siversd_pb2_grpc.py
siversd/pisivers/: iq.py  (+3 more)
spidev/: __init__.py  spidev.py
udev/: 40-piradio.rules
util/: dump_max.py  setdac.py  test_lmx.py  test_ltc.py  test_max.py
zcu111/: CMakeLists.txt  __init__.py  zcu111-set-clocks.cpp  zcu111.py
zcu111d/: CHANGELOG  CMakeLists.txt  copyright
zcu111d/conf/: io.piradio.zcu111d.conf  io.piradio.zcu111d.service
zcu111d/deb/: conffiles  postinst
zcu111d/include/piradio/: clocks.hpp  i2c.hpp  rfdc.hpp  rfdc_dc.hpp  rfdc_str.hpp  rfdc_tile.hpp
zcu111d/src/: LMX_regs.cxx  clocks.cxx  i2c.cxx  rfdc.cxx  rfdc_adc.cxx  rfdc_dac.cxx  rfdc_dc.cxx  rfdc_str.cxx  rfdc_tile.cxx  zcu111.proto  zcu111d.cxx
zcu111d/src/xilinx/: xrfdc.c
(+90 files in other folders)
