[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="piradio"
version="0.1.0"

dependencies = [
    "click",
    "Pygments",
    "prompt-toolkit",
    "python-periphery",
    "numpy",
    "twisted"
]

[project.scripts]
pircons="piradio.console:start_console"	
piradiod="piradio.daemon:main"

[tool]

[tool.hatch.build.targets.wheel]
packages = ["piradio"]