[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="piradio"
version="0.1.0"

dependencies = [
    "click",
    "Pygments",
    "matplotlib",
    "prompt-toolkit",
    "python-periphery",
    "numpy",
    "twisted"
]

[project.scripts]
piradiod="piradio.daemon:main"
betelgeuse="piradio.boards.Betelgeuse:cli"

[tool]

[tool.hatch.build.targets.wheel]
packages = ["piradio"]