[metadata]
name = piradiod
version = 0.1.0
author = Pi Radio, Inc.
author_email = zapman@pi-rad.io
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:

install_requires =
    click

[options.entry_points]
console_scripts =
    pircons = piradiod.console.start_console