cmake_minimum_required(VERSION 3.8)

project(BASE)

add_custom_target(base ALL)



set(SCRIPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../scripts)
set(MACRO_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../cmake)

include(${MACRO_DIR}/click-man-pages.cmake)

#add_custom_command(OUTPUT touch_me COMMAND "touch touch_me")

#set(CPACK_DEBIAN_base_PACKAGE_CONTROL_STRICT_PERMISSION TRUE)

#add_custom_target(changelog COMMAND "echo ${TARGET_FILE} ; gzip -c CHANGELOG > changelog.gz" BYPRODUCTS "changelog.gz")

add_custom_target(changelog.gz
  COMMENT "Compressing changelog"
  COMMAND gzip -n --best -c ${CMAKE_CURRENT_SOURCE_DIR}/CHANGELOG > ${CMAKE_CURRENT_BINARY_DIR}/changelog.gz
  DEPENDS "CHANGELOG")


generate_click_man_pages(src/piradio-admin BASE)

add_dependencies(base changelog.gz)
add_dependencies(base compressed_man_pages)

message(STATUS "IN BASE")

set(STANDARD_DIR_PERM OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
set(STANDARD_EXE_PERM OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
set(STANDARD_DOC_PERM OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
  
install(DIRECTORY DESTINATION usr/ COMPONENT BASE DIRECTORY_PERMISSIONS ${STARNDARD_DIR_PERM})
install(DIRECTORY DESTINATION usr/bin/ COMPONENT BASE DIRECTORY_PERMISSIONS ${STARNDARD_DIR_PERM})
install(DIRECTORY DESTINATION usr/share/ COMPONENT BASE DIRECTORY_PERMISSIONS ${STARNDARD_DIR_PERM})
install(DIRECTORY DESTINATION usr/share/man/ COMPONENT BASE DIRECTORY_PERMISSIONS ${STARNDARD_DIR_PERM})
install(DIRECTORY DESTINATION usr/share/man/man1/ COMPONENT BASE DIRECTORY_PERMISSIONS ${STARNDARD_DIR_PERM})
install(DIRECTORY DESTINATION usr/share/doc/ COMPONENT BASE DIRECTORY_PERMISSIONS ${STARNDARD_DIR_PERM})
install(DIRECTORY DESTINATION usr/share/doc/piradio-base/ COMPONENT BASE DIRECTORY_PERMISSIONS ${STARNDARD_DIR_PERM})


install(DIRECTORY DESTINATION etc/ COMPONENT BASE DIRECTORY_PERMISSIONS ${STARNDARD_DIR_PERM})
install(DIRECTORY DESTINATION etc/piradio COMPONENT BASE)
install(DIRECTORY DESTINATION etc/piradio/firmware COMPONENT BASE)

install(FILES copyright
  DESTINATION usr/share/doc/piradio-base/
  COMPONENT BASE
  PERMISSIONS ${STANDARD_DOC_PERM})

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/changelog.gz
  DESTINATION usr/share/doc/piradio-base/
  COMPONENT BASE
  PERMISSIONS ${STANDARD_DOC_PERM})

install(FILES src/piradio-admin
  DESTINATION usr/bin
  COMPONENT BASE
  PERMISSIONS ${STANDARD_EXE_PERM})

